--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         </title>
     </head>
     <body>
-        
+        <header>
+            <h1>
+                What ‘WandaVision’ Gets Right (and Wrong) About Female Superheroes
+            </h1>
+        </header>
     </body>
 </html>
