--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
                 What ‘WandaVision’ Gets Right (and Wrong) About Female Superheroes
             </h1>
         </header>
+        <section>
+            <article>
+                <h2>
+                    In the Disney+ series, Wanda Maximoff has depth and power, a turn for the Marvel world. But she faces a familiar dilemma: Hero work or domestic bliss?
+                </h2>
+            </article>
+        </section>
     </body>
 </html>
