--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
                 <h2>
                     In the Disney+ series, Wanda Maximoff has depth and power, a turn for the Marvel world. But she faces a familiar dilemma: Hero work or domestic bliss?
                 </h2>
+                <p>
+                    <figure>
+                        <img src=https://static01.nyt.com/images/2021/03/10/arts/10wandavision-notebook2/10wandavision-notebook2-jumbo-v3.jpg?quality=90&auto=webp alt="In “WandaVision,” Elizabeth Olsen plays Wanda Maximoff, who seems to be living in an old sitcom." title="In “WandaVision,” Elizabeth Olsen plays Wanda Maximoff, who seems to be living in an old sitcom." width="700"/>
+                        <figcaption>
+                            In “WandaVision,” Elizabeth Olsen plays Wanda Maximoff, who seems to be living in an old sitcom.
+                        </figcaption>
+                    </figure>
+                </p>
             </article>
         </section>
     </body>
