--- a/index.html
+++ b/index.html
@@ -66,6 +66,14 @@
                 <p>
                     This was a watered down representation of a formidable hero. But why?
                 </p>
+                <p>
+                    <figure>
+                    <img src=https://static01.nyt.com/images/2021/03/10/arts/10wandavision-notebook3/merlin_184219383_b9151e56-19ae-4733-8113-69d775e32568-jumbo.jpg?quality=90&auto=webp alt="Wanda makes use of her magic." title="Wanda makes use of her magic." width="700"/>
+                    <figcaption>
+                        Wanda makes use of her magic.
+                    </figcaption>
+                    </figure>
+                </p>
             </article>
         </section>
     </body>
