--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
                     And Wanda cannot simply own her powers from the start; she must discover them through her emotional trauma, another gendered cliché, the idea that female strength is always grounded in emotion. But society has also historically fostered the idea that too much female emotion — hysteria — is also a threat, something reinforced by the series, as when Wanda panics and nearly injures the citizens of Westview with her magic. It’s the very nature of her abilities, which are defined as “chaos magic.”
                 </p>
                 <p>
+                    <figure>
+                        <img src=https://static01.nyt.com/images/2021/03/10/arts/10wandavision-notebook5/merlin_184212078_8cc69444-3bd7-476a-9236-37401bdba154-superJumbo.jpg?quality=90&auto=webp alt="Wanda celebrates Halloween with her boys, from left, Tommy (Jett Klyne) and Billy (Julian Hilliard). " title="Wanda celebrates Halloween with her boys, from left, Tommy (Jett Klyne) and Billy (Julian Hilliard). " width="700"/>
+                            <figcaption>
+                                Wanda celebrates Halloween with her boys, from left, Tommy (Jett Klyne) and Billy (Julian Hilliard).
+                            </figcaption>
+                        </figure>
+                    </p>
             </article>
         </section>
     </body>
